<resources>
    <string name="app_name">DO3</string>

    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_name">用户名</string>
    <string name="prompt_password">输入密码</string>
    <string name="prompt_passwordagain">再次输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_register_in">注册</string>
    <string name="error_invalid_password">无效的密码</string>
    <string name="error_invalid_Code">无效的验证码</string>
    <string name="error_invalid_name">用户名不存在</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">请求失败</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
