<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <!--android:digits="0123456789abcdefjhigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ~!@#$%^/*()_+."-->
    <!-- Login progress -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">

            <ImageView
                android:layout_width="330px"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="150px"
                android:scaleType="centerInside"
                android:src="@mipmap/do_logo" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="130px">

                <TextView
                    android:id="@+id/tv_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="登录"
                    android:textColor="@android:color/white"
                    android:textSize="72px" />
            </RelativeLayout>

            <EditText
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:background="@drawable/edittext_bg_selector"
                android:textCursorDrawable="@drawable/cursor_white"
                android:hint="@string/prompt_name"
                android:inputType="text"
                android:maxLines="1"
                android:paddingTop="20dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="#80ffffff" />

            <TextView
                android:id="@+id/tvZH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/error_invalid_name"
                android:textColor="@color/fontRed"
                android:textSize="16sp"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg_selector"
                    android:hint="@string/prompt_password"
                    android:textCursorDrawable="@drawable/cursor_white"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingTop="20dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="#80ffffff" />

                <ImageView
                    android:id="@+id/seePassWord"
                    android:layout_width="60px"
                    android:layout_height="90px"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="30px"
                    android:onClick="onClick"
                    android:paddingBottom="30px"
                    android:src="@mipmap/ic_visibility_off"
                    android:visibility="gone" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvMM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/error_invalid_password"
                android:textColor="@color/fontRed"
                android:textSize="16sp"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">

                <EditText
                    android:id="@+id/edtCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_bg_selector"
                    android:hint="图片验证码"
                    android:textCursorDrawable="@drawable/cursor_white"
                    android:inputType="text"
                    android:paddingTop="20dp"
                    android:textColor="@color/white"
                    android:textColorHint="#80ffffff" />

                <ImageView
                    android:id="@+id/imgCode"
                    android:layout_width="200px"
                    android:layout_height="110px"
                    android:layout_alignBottom="@+id/edtCode"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="5dp"
                    android:background="@color/white"
                    android:paddingBottom="30px" />

                <TextView
                    android:id="@+id/reload"
                    android:layout_width="200px"
                    android:layout_height="110px"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:paddingBottom="30px"
                    android:text="重新加载"
                    android:textColor="@color/mainColor"
                    android:textSize="32px" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvYZM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/error_invalid_Code"
                android:textColor="@color/fontRed"
                android:textSize="16sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/loginBtn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/layout_back"
                android:gravity="center"
                android:onClick="onClick"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="登录"
                android:textColor="@color/mainColor"
                android:textSize="48px" />

            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="165px"
                android:padding="60px"
                android:gravity="center_horizontal"
                android:onClick="onClick"
                android:text="注册账户"
                android:textColor="@color/white"
                android:textSize="32px" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
